k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bluestar-th
  labels:
    app.kubernetes.io/name: bluestar-th
