k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bluestar-th
  namespace: bluestar-th
  labels:
    app.kubernetes.io/name: bluestar-th
spec:
  type: ClusterIP
  selector:
    app: bluestar-th
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
